<resources>
    <string name="app_name">Spectrum</string>
    <string name="action_settings">Settings</string>

    <string name="menu_zoom_enable">Enable Zoom</string>
    <string name="menu_zoom_disable">Disable Zoom</string>
<<<<<<< HEAD
    <string name="menu_scale_fit_center">Fit Center</string>
    <string name="menu_scale_fit_start">Fit Top-Right</string>
    <string name="menu_scale_fit_end">Fit Bottom-Right</string>
    <string name="menu_scale_fit_xy">Fit to Screen</string>
    <string name="menu_scale_center">Scale to Center</string>
    <string name="menu_scale_center_inside">Scale to Center-Inside</string>
    <string name="menu_scale_center_crop">Scale to Center-Crop</string>
    <string name="menu_zoom_random_animate">Scale to Random (Animated)</string>
    <string name="menu_zoom_random">Scale to Random</string>
    <!--
    <string name="menu_matrix_restore">Restore Display Matrix</string>
    <string name="menu_matrix_capture">Capture Display Matrix</string>
    <string name="extract_visible_bitmap">Extract visible bitmap</string>-->
=======
    <string name="menu_scale_fit_center">Change to FIT_CENTER</string>
    <string name="menu_scale_fit_start">Change to FIT_START</string>
    <string name="menu_scale_fit_end">Change to FIT_END</string>
    <string name="menu_scale_fit_xy">Change to FIT_XY</string>
    <string name="menu_scale_center">Change to CENTER</string>
    <string name="menu_scale_center_inside">Change to CENTER_INSIDE</string>
    <string name="menu_scale_center_crop">Change to CENTER_CROP</string>
    <string name="menu_zoom_random_animate">Animate scale to random value</string>
    <string name="menu_zoom_random">Set scale to random value</string>
    <string name="menu_matrix_restore">Restore Display Matrix</string>
    <string name="menu_matrix_capture">Capture Display Matrix</string>
    <string name="extract_visible_bitmap">Extract visible bitmap</string>


>>>>>>> 7931d0e3fecfe163c5b2d105f4fac0c176466eb8

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
