<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cs.spectrum.MainActivity">


    tools:ignore="UnusedAttribute">
<<<<<<< HEAD
    
=======

    <item
        android:id="@+id/menu_zoom_toggle"
        android:title="@string/menu_zoom_disable"/>
    <item
        android:id="@+id/menu_scale_fit_center"
        android:title="@string/menu_scale_fit_center"/>
    <item
        android:id="@+id/menu_scale_fit_start"
        android:title="@string/menu_scale_fit_start"/>
    <item
        android:id="@+id/menu_scale_fit_end"
        android:title="@string/menu_scale_fit_end"/>
    <item
        android:id="@+id/menu_scale_fit_xy"
        android:title="@string/menu_scale_fit_xy"/>
    <item
        android:id="@+id/menu_scale_scale_center"
        android:title="@string/menu_scale_center"/>
    <item
        android:id="@+id/menu_scale_scale_center_crop"
        android:title="@string/menu_scale_center_crop"/>
    <item
        android:id="@+id/menu_scale_scale_center_inside"
        android:title="@string/menu_scale_center_inside"/>
    <item
        android:id="@+id/menu_scale_random_animate"
        android:title="@string/menu_zoom_random_animate"/>
    <item
        android:id="@+id/menu_scale_random"
        android:title="@string/menu_zoom_random"/>
    <item
        android:id="@+id/menu_matrix_restore"
        android:title="@string/menu_matrix_restore"/>
    <item
        android:id="@+id/menu_matrix_capture"
        android:title="@string/menu_matrix_capture"/>
    <item
        android:id="@+id/extract_visible_bitmap"
        android:title="@string/extract_visible_bitmap"/>

>>>>>>> 7931d0e3fecfe163c5b2d105f4fac0c176466eb8
    <item
        android:id="@+id/action_Hide_Buttons"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="Hide Buttons" />

    <item
        android:id="@+id/action_Show_Buttons"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="Show Buttons" />
    <item
        android:id="@+id/menu_zoom_toggle"
        android:title="@string/menu_zoom_disable"/>
    <item
        android:id="@+id/menu_scale_fit_center"
        android:title="@string/menu_scale_fit_center"/>
    <item
        android:id="@+id/menu_scale_fit_start"
        android:title="@string/menu_scale_fit_start"/>
    <item
        android:id="@+id/menu_scale_fit_end"
        android:title="@string/menu_scale_fit_end"/>
    <item
        android:id="@+id/menu_scale_fit_xy"
        android:title="@string/menu_scale_fit_xy"/>
    <item
        android:id="@+id/menu_scale_scale_center"
        android:title="@string/menu_scale_center"/>
    <item
        android:id="@+id/menu_scale_scale_center_crop"
        android:title="@string/menu_scale_center_crop"/>
    <item
        android:id="@+id/menu_scale_scale_center_inside"
        android:title="@string/menu_scale_center_inside"/>
    <item
        android:id="@+id/menu_scale_random_animate"
        android:title="@string/menu_zoom_random_animate"/>
    <item
        android:id="@+id/menu_scale_random"
        android:title="@string/menu_zoom_random"/>

    <!--
    <item
        android:id="@+id/menu_matrix_restore"
        android:title="@string/menu_matrix_restore"/>
    <item
        android:id="@+id/menu_matrix_capture"
        android:title="@string/menu_matrix_capture"/>
    <item
        android:id="@+id/extract_visible_bitmap"
        android:title="@string/extract_visible_bitmap"/> -->
</menu>
